Fix drink not showing up due to misplaced useEffect in BaristaForm

--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,8 @@ button.newdrink {
 .drink-container {
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .textbox {
